--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>WebSocket Test</title>
     <link rel='stylesheet' href='style.css' type='text/css'/>
     <script type='text/javascript' src='script.js'></script>
+    <script type='text/javascript' src='timer.js'></script>
 </head>
 
 <body>
