--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <h2>Messages</h2>
 </div>
 
-<div>
+<div id="pomodoroTimer">
     <h2>Ceci n'est pas une pomodoro timer</h2>
     <button id="startTimer">Start</button>
     <button id="stopTimer" disabled >Stop</button>
     <table>
-    <tr><td><span>isWorkState</span></td><td><span style="padding-left:15px; color:green; font-weight: bold;" id="isWorkStateValue"></span></td></tr>
-    <tr><td><span>secondsRemaining</span></td><td><span style="padding-left:15px; color:green; font-weight: bold;" id="secondsRemainingValue"></span></td></tr>
-    <tr><td><span>isRunning</span></td><td><span style="padding-left:15px; color:green; font-weight: bold;" id="isRunningValue"></span></td></tr>
+    <tr><td><span>isWorkState</span></td><td><span id="isWorkStateValue"></span></td></tr>
+    <tr><td><span>secondsRemaining</span></td><td><span id="secondsRemainingValue"></span></td></tr>
+    <tr><td><span>isRunning</span></td><td><span id="isRunningValue"></span></td></tr>
     </table>
 </div>
 <div>
