send preferences dict
technically this sends. there's nothing for receiving it yet though.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
     </table>
 </div>
 <div>
+    <h2>Send Preferences</h2>
+    <button id="sendButton" onclick="sendPomodoroPreferences();">Send Preferences</button>
+</div>
+<div>
     <h2>Send New State</h2>
     <p>
         <input type="number" min="0" step="1" id="secondsRemainingInput" value=60 />
